Fixed overflowing gallery on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 html {
     font-size: 16px;
 }
@@ -60,7 +62,6 @@ a {
     height: 50vh;
     gap:10px;
     padding: 10px 10px;
-    min-width: 400px;
     overflow-x: scroll; 
 }
 
